--- a/client/style/style.css
+++ b/client/style/style.css
@@ -257,9 +257,26 @@ textarea:-ms-input-placeholder {
     height: 100%;
 }
 
-#question_footer {
+.question_footer {
     width: 100%;
-    background-color: red;
     position: absolute;
     bottom: 3em;
+}
+
+.questions_header {
+    background-color: #15bfcb;
+    width: 100%;
+}
+
+.questions_header .sapMLabel{
+    position: absolute;
+    color: #FFF;
+}
+
+.questions_header .sapMLabel.page_num{
+    right: 1em;
+}
+
+.questions_header .sapMLabel.question_title{
+    left: 1em;
 }
