--- a/client/style/style.css
+++ b/client/style/style.css
@@ -114,7 +114,6 @@ textarea:-ms-input-placeholder {
 
 #loginPage .sapMInputBaseInner {
     border: none;
-    border-radius: 5px;
 }
 
 #loginPage .sapMLabel {
@@ -160,7 +159,7 @@ textarea:-ms-input-placeholder {
 
 #appLayout {
     margin-top: 3em;
-    margin-bottom: 3em;
+    margin-bottom: 2em;
     padding-bottom: 0.5em;
     border-bottom: 1px solid white;
     border-bottom: 1px solid rgba(255, 255, 255, 0.5);
@@ -171,14 +170,19 @@ textarea:-ms-input-placeholder {
 }
 
 #usernameTextArea .sapMInputBaseInner {
-    border-bottom-right-radius: 0px;
-    border-bottom-left-radius: 0px;
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
     border-bottom: 1px solid #f2f2f2;
 }
 
 #emailTextArea .sapMInputBaseInner {
-    border-top-right-radius: 0px;
-    border-top-left-radius: 0px;
+    border-bottom: 1px solid #f2f2f2;
+}
+
+#yearOfBirthTextArea .sapMInputBaseInner {
+    border-bottom-right-radius: 5px;
+    border-bottom-left-radius: 5px;
+    border-bottom: 1px solid #f2f2f2;
 }
 
 #genderLabel {
