--- a/client/style/style.css
+++ b/client/style/style.css
@@ -139,7 +139,7 @@ textarea:-ms-input-placeholder {
     border: none;
 }
 
-#loginPage,#submissionAlertPage .centeredLayout {
+#loginPage .centeredLayout, #submissionAlertPage .centeredLayout {
     display: table;
     margin-left: auto;
     margin-right: auto;
