--- a/client/style/style.css
+++ b/client/style/style.css
@@ -154,22 +154,12 @@ textarea:-ms-input-placeholder {
 }
 
 #loginPage .marginedLeft {
-    padding-left: 3em;
+    padding-left: 2.75em;
 }
-#speechPage #finishBtn {
-    position: absolute;
-    bottom: 0;
-    background-color: #15BFCB;
-    border-top: 1px solid white;
-    padding-top: 0.5em;
-    padding-bottom: 0.5em;
-    font-family: Designio;
-    font-size: .7em;
 
-}
 #appLayout {
     margin-top: 3em;
-    margin-bottom: 2em;
+    margin-bottom: 2.5em;
     padding-bottom: 0.5em;
     border-bottom: 1px solid white;
     border-bottom: 1px solid rgba(255, 255, 255, 0.5);
@@ -199,22 +189,13 @@ textarea:-ms-input-placeholder {
     line-height: 2.9em;
     font-weight: 300;
 }
-#genderLabel {
-    line-height: 2.9em;
-    font-weight: 300;
-}
 
 #genderLayout {
-    margin-top: 2em;
-}
-
-#yearOfBirthLabel {
-    line-height: 2.8em;
-    margin-right: 1em;
+    margin-top: 1.5em;
 }
 
 #dateOfOnsetYearSelect {
-    margin-left: 1em;
+    margin-left: 1.9em;
 }
 
 #dateOfOnsetSelectLayout {
@@ -225,16 +206,12 @@ textarea:-ms-input-placeholder {
     margin-top: 0.5em;
     margin-bottom: 1em;
 }
-.finishLayout {
-    position: absolute;
-    bottom: 0;
-    background-color: #15BFCB;
-    border-top: 1px solid white;
-    padding-top: 0.5em;
-    padding-bottom: 0.5em;
-    font-family: Designio;
-    font-size: 1.7em;
 
+#contentLayout {
+    position: absolute;
+    top: 0;
+    bottom: 3em;
+    overflow: auto;
 }
 
 #loginPage .sapMLabel#loginLabel {
@@ -274,10 +251,6 @@ textarea:-ms-input-placeholder {
     border-top: 2px solid white;
 }
 
-/*#weeklyTasksPage .sapMList{
-    height: 100%;
-}*/
-
 .taskIcon{
     margin: 0.5em 0.2em 0.5em 0.5em;
     width: 10%
@@ -310,7 +283,7 @@ textarea:-ms-input-placeholder {
     height: 100%;
 }
 
-/*********** Submission Alert page *****/
+/********** Submission Alert page **********/
 
 
 #submissionAlertPage .sapMLabel {
@@ -420,4 +393,26 @@ textarea:-ms-input-placeholder {
 #completedPage #completedLabel{
     color:#ffffff;
     text-decoration: underline;
+}
+
+#speechPage #finishBtn {
+    position: absolute;
+    bottom: 0;
+    background-color: #15BFCB;
+    border-top: 1px solid white;
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;
+    font-family: Designio;
+    font-size: .7em;
+}
+
+.finishLayout {
+    position: absolute;
+    bottom: 0;
+    background-color: #15BFCB;
+    border-top: 1px solid white;
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;
+    font-family: Designio;
+    font-size: 1.7em;
 }
