--- a/ALS_client/src/main/webapp/style/style.css
+++ b/ALS_client/src/main/webapp/style/style.css
@@ -193,17 +193,16 @@ textarea:-ms-input-placeholder {
 }
 
 .sapMLabel#disclaimerLabel {
-    margin-top: 3em;
+    position: absolute;
+    bottom: 2em;
     font-size: 1em;
     font-weight: 100;
 }
 
-#appLogoIcon {
-    margin-top: 5em;
-    margin-bottom: 4em;
-    padding-bottom: 1em;
-    border-bottom: 1px solid white;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+#appLogoIcon,
+#appLogoIconRegister {
+    margin-top: 4em;
+    margin-bottom: 3em;
 }
 
 #usernameTextArea .sapMInputBaseInner {
