--- a/ALS_client/src/main/webapp/style/writing.css
+++ b/ALS_client/src/main/webapp/style/writing.css
@@ -1,8 +1,22 @@
-
-	
-	#houseCanvas{
-		display: inline-block; 
-		background: #f2f2f2; 
-
+.hwCanvas{
+		height: 80%;
+		width: 100%;
+		display: flex;
+		flex-direction: column;
+		-webkit-flex-direction: column;
+		justify-content: space-around;
+		-webkit-justify-content: space-around;
+		align-items: center;
+		-webkit-align-items:center;
 	}
 	
+
+	
+	canvas { 
+		display: inline-block; 
+		box-shadow: 0px 0px 5px grey;
+	} 
+	
+	.viz{
+		position: inherit;
+	}
