--- a/ALS_client/src/main/webapp/style/sensors.css
+++ b/ALS_client/src/main/webapp/style/sensors.css
@@ -111,3 +111,9 @@
 		height: 80%;
 		width: 100%;
 }
+#speechPage #recordLabel{
+    text-align: center !important;
+    font-size: 1.5em;
+    width: 100%;
+    font-family: Designio;
+}
