--- a/ALS_client/src/main/webapp/style/sensors.css
+++ b/ALS_client/src/main/webapp/style/sensors.css
@@ -117,3 +117,14 @@
     width: 100%;
     font-family: Designio;
 }
+#speechPage #sentenceRecordedLbl{
+    text-align: center !important;
+    font-size: 1.5em;
+    width: 100%;
+    font-family: Designio;
+}
+#speechPage #questions_header {
+
+    width: 100%;
+
+}
